--- a/app/src/main/res/layout/fragment_cocktails.xml
+++ b/app/src/main/res/layout/fragment_cocktails.xml
@@ -3,12 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.fragments.cocktails.CocktailsFragment">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/newCocktails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
+
+    <TextView
+        android:id="@+id/details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="DETAILS" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
