--- a/app/src/main/res/layout/fragment_cocktail_details.xml
+++ b/app/src/main/res/layout/fragment_cocktail_details.xml
@@ -79,6 +79,19 @@
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@id/tvRecipe" />
 
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@color/white"
+            android:fontFamily="@font/didact_gothic"
+            android:text="@string/delete_button"
+            android:textColor="@color/color_background_button_save"
+            android:textSize="24sp"
+            app:layout_constraintTop_toBottomOf="@id/btnEdit" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
