--- a/app/src/main/res/layout/add_ingrediets_dialog.xml
+++ b/app/src/main/res/layout/add_ingrediets_dialog.xml
@@ -1,88 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:backgroundTint="@color/white"
     app:cardCornerRadius="12dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/didact_gothic"
-            android:text="@string/add_ingredient_title"
-            android:textSize="32sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilIngredient"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            app:boxCornerRadiusBottomEnd="34dp"
-            app:boxCornerRadiusBottomStart="34dp"
-            app:boxCornerRadiusTopEnd="34dp"
-            app:boxCornerRadiusTopStart="34dp"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle">
+            android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/etIngredient"
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="32dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="@font/didact_gothic"
-                android:hint="@string/ingredient_edit_text"
-                android:textColor="@color/color_edit_text"
-                android:textSize="16sp" />
+                android:text="@string/add_ingredient_title"
+                android:textSize="32sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilIngredient"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                app:boxCornerRadiusBottomEnd="34dp"
+                app:boxCornerRadiusBottomStart="34dp"
+                app:boxCornerRadiusTopEnd="34dp"
+                app:boxCornerRadiusTopStart="34dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvTitle">
 
-        <TextView
-            android:id="@+id/tvIngredientLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/didact_gothic"
-            android:text="@string/add_ingredient_label"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@id/tilIngredient"
-            app:layout_constraintTop_toBottomOf="@id/tilIngredient" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etIngredient"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/didact_gothic"
+                    android:hint="@string/ingredient_edit_text"
+                    android:textColor="@color/color_edit_text"
+                    android:textSize="16sp" />
 
-        <Button
-            android:id="@+id/btnAddIngredient"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="24dp"
-            android:backgroundTint="@color/color_background_button_save"
-            android:fontFamily="@font/didact_gothic"
-            android:text="@string/add_button"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@id/tvIngredientLabel" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/btnCancelIngredient"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="24dp"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/didact_gothic"
-            android:text="@string/cancel_button"
-            android:textColor="@color/color_background_button_save"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@id/btnAddIngredient" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvIngredientLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:fontFamily="@font/didact_gothic"
+                android:text="@string/add_ingredient_label"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@id/tilIngredient"
+                app:layout_constraintTop_toBottomOf="@id/tilIngredient" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnAddIngredient"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="24dp"
+                android:backgroundTint="@color/color_background_button_save"
+                android:fontFamily="@font/didact_gothic"
+                android:text="@string/add_button"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvIngredientLabel" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnCancelIngredient"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginVertical="24dp"
+                android:backgroundTint="@color/white"
+                android:fontFamily="@font/didact_gothic"
+                android:text="@string/cancel_button"
+                android:textColor="@color/color_background_button_save"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnAddIngredient"
+                app:strokeColor="@color/color_background_button_save"
+                app:strokeWidth="1dp" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+    </ScrollView>
+
+</com.google.android.material.card.MaterialCardView>
