--- a/app/src/main/res/layout/cocktails_item.xml
+++ b/app/src/main/res/layout/cocktails_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +8,7 @@
     android:layout_margin="4dp"
     app:cardCornerRadius="54dp">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivCocktailImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:scaleType="fitCenter"
         android:src="@drawable/cocktail_placeholder"/>
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvCocktailName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,4 +27,4 @@
         android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="34dp"/>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
