--- a/app/src/main/res/layout/fragment_edit_cocktail.xml
+++ b/app/src/main/res/layout/fragment_edit_cocktail.xml
@@ -6,10 +6,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/cvAddPhoto"
             android:layout_width="0dp"
             android:layout_height="204dp"
@@ -21,13 +21,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_add_photo" />
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilTitle"
@@ -40,7 +40,7 @@
             app:boxCornerRadiusTopStart="34dp"
             app:layout_constraintTop_toBottomOf="@id/cvAddPhoto">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,7 +51,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvTitleLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
             app:boxCornerRadiusTopStart="34dp"
             app:layout_constraintTop_toBottomOf="@id/tvTitleLabel">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etDescriptionLabel"
                 android:layout_width="match_parent"
                 android:layout_height="154dp"
@@ -86,7 +86,7 @@
 
 
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvDescriptionLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -99,8 +99,10 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvIngredients"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
@@ -130,7 +132,7 @@
             app:boxCornerRadiusTopStart="34dp"
             app:layout_constraintTop_toBottomOf="@id/fabAddNewIngredient">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etRecipe"
                 android:layout_width="match_parent"
                 android:layout_height="154dp"
@@ -141,7 +143,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tvRecipeLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -152,7 +154,7 @@
             app:layout_constraintStart_toStartOf="@id/tilRecipe"
             app:layout_constraintTop_toBottomOf="@id/tilRecipe" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -165,7 +167,7 @@
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@id/tvRecipeLabel" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -174,6 +176,8 @@
             android:backgroundTint="@color/white"
             android:fontFamily="@font/didact_gothic"
             android:text="@string/cancel_button"
+            app:strokeWidth="1dp"
+            app:strokeColor="@color/color_background_button_save"
             android:textColor="@color/color_background_button_save"
             android:textSize="24sp"
             app:layout_constraintTop_toBottomOf="@id/btnSave" />
