--- a/app/src/main/res/layout/cocktails_item.xml
+++ b/app/src/main/res/layout/cocktails_item.xml
@@ -8,23 +8,35 @@
     android:layout_margin="4dp"
     app:cardCornerRadius="54dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ivCocktailImage"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/cocktail_placeholder"/>
+        android:layout_height="match_parent">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvCocktailName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Pink Lemonade"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        android:fontFamily="@font/didact_gothic"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="34dp"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivCocktailImage"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H, 1"
+            app:layout_constraintTop_toTopOf="parent"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/cocktail_placeholder"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvCocktailName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Pink Lemonade"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/didact_gothic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="34dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 </com.google.android.material.card.MaterialCardView>
