--- a/app/src/main/res/layout/fragment_cocktail_details.xml
+++ b/app/src/main/res/layout/fragment_cocktail_details.xml
@@ -13,8 +13,9 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivImage"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:src="@drawable/cocktail_placeholder"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H, 1"
+            tools:src="@drawable/cocktail_placeholder"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"/>
 
