--- a/app/src/main/res/layout/fragment_edit_cocktail.xml
+++ b/app/src/main/res/layout/fragment_edit_cocktail.xml
@@ -12,7 +12,8 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cvAddPhoto"
             android:layout_width="0dp"
-            android:layout_height="204dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="H, 1"
             android:layout_marginHorizontal="72dp"
             android:layout_marginVertical="40dp"
             android:backgroundTint="@color/add_photo_background"
@@ -22,9 +23,11 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivCocktailImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_add_photo" />
 
         </com.google.android.material.card.MaterialCardView>
@@ -46,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/didact_gothic"
                 android:hint="@string/title_edit_text"
+                android:inputType="textAutoComplete"
                 android:textColor="@color/color_edit_text"
                 android:textSize="16sp" />
 
@@ -119,7 +123,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rvIngredients"
-            android:tint="@color/white"/>
+            android:tint="@color/white"
+            android:contentDescription="@string/add_new_cocktail" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilRecipe"
