--- a/app/src/main/res/layout/fragment_cocktail_details.xml
+++ b/app/src/main/res/layout/fragment_cocktail_details.xml
@@ -10,62 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ivImage"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/details_rv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="H, 1"
-            tools:src="@drawable/cocktail_placeholder"
-            android:scaleType="centerCrop"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:paddingBottom="8dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/didact_gothic"
-            tools:text="@string/app_title"
-            android:textSize="32sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ivImage" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/didact_gothic"
-            tools:text="@string/app_title"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTitle" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvIngredients"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/didact_gothic"
-            tools:text="@string/app_title"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvDescription" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tvRecipe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/didact_gothic"
-            tools:text="@string/app_title"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvIngredients" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnEdit"
@@ -78,7 +29,7 @@
             android:text="@string/edit_button"
             android:textColor="@color/white"
             android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@id/tvRecipe" />
+            app:layout_constraintTop_toBottomOf="@id/details_rv" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnDelete"
