--- a/app/src/main/res/layout/add_ingrediets_dialog.xml
+++ b/app/src/main/res/layout/add_ingrediets_dialog.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/tilIngredient"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_margin="24dp"
                 app:boxCornerRadiusBottomEnd="34dp"
                 app:boxCornerRadiusBottomStart="34dp"
                 app:boxCornerRadiusTopEnd="34dp"
@@ -65,38 +65,18 @@
                 app:layout_constraintStart_toStartOf="@id/tilIngredient"
                 app:layout_constraintTop_toBottomOf="@id/tilIngredient" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnAddIngredient"
+            <ru.markkuzi.mycocktails.presentation.customviews.BottomButtonsView
+                android:id="@+id/bottomButtons"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="24dp"
-                android:backgroundTint="@color/color_background_button_save"
-                android:fontFamily="@font/didact_gothic"
-                android:text="@string/add_button"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:paddingBottom="24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvIngredientLabel" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnCancelIngredient"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="24dp"
-                android:backgroundTint="@color/white"
-                android:fontFamily="@font/didact_gothic"
-                android:text="@string/cancel_button"
-                android:textColor="@color/color_background_button_save"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btnAddIngredient"
-                app:strokeColor="@color/color_background_button_save"
-                app:strokeWidth="1dp" />
+                app:layout_constraintTop_toBottomOf="@id/tvIngredientLabel"
+                app:bottomPositiveButtonText="@string/add_button"
+                app:bottomNegativeButtonText="@string/cancel_button" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
