--- a/app/src/main/res/layout/fragment_cocktail_details.xml
+++ b/app/src/main/res/layout/fragment_cocktail_details.xml
@@ -17,34 +17,17 @@
             android:paddingBottom="8dp"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnEdit"
+        <ru.markkuzi.mycocktails.presentation.customviews.BottomButtonsView
+            android:id="@+id/bottomButtons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@color/color_background_button_save"
-            android:fontFamily="@font/didact_gothic"
-            android:text="@string/edit_button"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@id/details_rv" />
+            android:paddingBottom="24dp"
+            app:layout_constraintTop_toBottomOf="@id/details_rv"
+            app:bottomPositiveButtonText="@string/edit_button"
+            app:bottomNegativeButtonText="@string/delete_button" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnDelete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="24dp"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/didact_gothic"
-            android:text="@string/delete_button"
-            app:strokeWidth="1dp"
-            app:strokeColor="@color/color_background_button_save"
-            android:textColor="@color/color_background_button_save"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@id/btnEdit" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
