--- a/app/src/main/res/layout/fragment_cocktail_details.xml
+++ b/app/src/main/res/layout/fragment_cocktail_details.xml
@@ -8,7 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/details_rv"
