--- a/app/src/main/res/layout/fragment_edit_cocktail.xml
+++ b/app/src/main/res/layout/fragment_edit_cocktail.xml
@@ -6,7 +6,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
 
         <com.google.android.material.card.MaterialCardView
