--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -12,10 +12,18 @@
         tools:layout="@layout/fragment_cocktails" >
         <action
             android:id="@+id/action_cocktailsFragment_to_cocktailDetailsFragment"
-            app:destination="@id/cocktailDetailsFragment" />
+            app:destination="@id/cocktailDetailsFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/action_cocktailsFragment_to_newCocktailFragment"
-            app:destination="@id/newCocktailFragment" />
+            app:destination="@id/newCocktailFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/editCocktailFragment"
@@ -29,7 +37,11 @@
         tools:layout="@layout/fragment_cocktail_details" >
         <action
             android:id="@+id/action_cocktailDetailsFragment_to_editCocktailFragment"
-            app:destination="@id/editCocktailFragment" />
+            app:destination="@id/editCocktailFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/newCocktailFragment"
